# GpgFrontend-Modules

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: GFModuleCommonUtils.hpp  GFModuleDeclare.h  GFModuleDefine.h  GFModuleExport.h  LogFormatter.h
sdk/: README
src/: CMakeLists.txt
src/gpg_info/: CMakeLists.txt
src/m_email/: AddressListEditorDialog.ui  CMakeLists.txt  EMAilHelper.cpp  EMailBasicGpgOpera.cpp  EMailBasicGpgOpera.h  EMailHelper.h  EMailMetaDataDialog.cpp  EMailMetaDataDialog.h  EMailMetaDataDialog.ui  EMailModel.h  EMailModule.cpp  EMailModule.h
src/m_email/ts/: ModuleEMail.de_DE.ts  ModuleEMail.en_US.ts  ModuleEMail.es_ES.ts  ModuleEMail.fr_FR.ts  ModuleEMail.it_IT.ts  ModuleEMail.it_iT.ts  ModuleEMail.ru_RU.ts  ModuleEMail.zh_CN.ts  ModuleEMail.zh_TW.ts
src/m_gpg_info/: CMakeLists.txt  GnuPGInfo.ui  GnuPGInfoGatheringModule.cpp  GnuPGInfoGatheringModule.h  GnupgTab.cpp  GnupgTab.h  GpgInfo.cpp  GpgInfo.h
src/m_gpg_info/ts/: ModuleGnuPGInfoGathering.de_DE.ts  ModuleGnuPGInfoGathering.en_US.ts  ModuleGnuPGInfoGathering.es_ES.ts  ModuleGnuPGInfoGathering.fr_FR.ts  ModuleGnuPGInfoGathering.it_iT.ts  ModuleGnuPGInfoGathering.ru_RU.ts  ModuleGnuPGInfoGathering.zh_CN.ts  ModuleGnuPGInfoGathering.zh_TW.ts
src/m_key_server_sync/: CMakeLists.txt  KeyInfo.h  KeyServerSyncModule.cpp  PKSInterface.cpp  PKSInterface.h  SearchKeyDialog.cpp  SearchKeyDialog.h  SearchKeyDialog.ui  VKSInterface.cpp  VKSInterface.h
src/m_key_server_sync/ts/: ModuleKeyServerSync.de_DE.ts  ModuleKeyServerSync.en_US.ts  ModuleKeyServerSync.es_ES.ts  ModuleKeyServerSync.fr_FR.ts  ModuleKeyServerSync.it_IT.ts  ModuleKeyServerSync.ru_RU.ts  ModuleKeyServerSync.zh_CN.ts  ModuleKeyServerSync.zh_TW.ts
src/m_paper_key/: CMakeLists.txt  PaperKeyModule.cpp  PaperKeyModule.h  extract.cpp  extract.h  output.cpp  output.h  packets.cpp  packets.h  paperkey.cpp  parse.cpp  parse.h  restore.cpp  restore.h
src/m_pinentry/: CMakeLists.txt  GpgPassphraseContext.cpp  GpgPassphraseContext.h  PinentryModule.cpp  PinentryModule.h  RaisePinentry.cpp  RaisePinentry.h  pinentry.cpp  pinentry.h  pinentry.qrc  pinentrydialog.cpp  pinentrydialog.h
src/m_ver_check/: BKTUSVersionCheckTask.cpp  BKTUSVersionCheckTask.h  CMakeLists.txt  GitHubVersionCheckTask.cpp  GitHubVersionCheckTask.h  SoftwareVersion.cpp  SoftwareVersion.h  UpdateTab.cpp  UpdateTab.h  Utils.cpp  Utils.h  VersionCheckTask.cpp  VersionCheckTask.h  VersionCheckingModule.cpp  VersionCheckingModule.h
src/m_ver_check/ts/: ModuleVersionChecking.de_DE.ts  ModuleVersionChecking.en_US.ts  ModuleVersionChecking.es_ES.ts  ModuleVersionChecking.fr_FR.ts  ModuleVersionChecking.it_IT.ts  ModuleVersionChecking.ru_RU.ts  ModuleVersionChecking.zh_CN.ts  ModuleVersionChecking.zh_TW.ts
src/ver_check/: CMakeLists.txt  VersionCheckTask.cpp  VersionCheckTask.h
